more sliders & things

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             <input type="range" min="0" max="628.3" value="10" class="slider" id="angleOffset"><p>Angle Offset</p>
             <input type="range" min="0" max="1000" value="400" class="slider" id="lengthFraction"><p>Length Fraction</p>
             <input type="range" min="0" max="10" value="4" class="slider" id="splitNum"><p>Split Number</p>
+            <input type="range" min="0" max="1000" value="600" class="slider" id="baseHeight"><p>Base Height</p>
+            <input type="checkbox" checked="true" class="checkbox" id="realTime"><p>Real-Time</p>
         </div>
-        <canvas id="canvas" width=260px height=200px></canvas>
+        <canvas id="canvas"></canvas>
         <script src="javascript/main.js"></script> 
     </body> 
 </html>
